--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>HappyDev</groupId>
+    <groupId>IT-conference</groupId>
     <artifactId>Lite2014</artifactId>
-    <version>1.0-HAPPYDEV-LITE</version>
+    <version>1.0-IT-CONFERENCE</version>
     <packaging>war</packaging>
 
     <properties>
